# riscv-li

./: Cargo.toml  README.md  index.html  main.js  shit.txt  style.css
.github/workflows/: pages.yml
pkg/: riscv_li_wasm.js  riscv_li_wasm_bg.wasm
scripts/: build-web.sh  deploy-web.sh  install-wasm-tools.sh
src/: float.rs  int.rs  lib.rs  main.rs
web/: Cargo.toml
web/src/: lib.rs
