[package]
name = "riscv-li"
version = "1.0.0"
edition = "2018"
authors = ["Kai Page <kai@quantaly.net>"]
description = "Loads arbitrary values into RISC-V registers"
homepage = "https://quantaly.github.io/riscv-li"
repository = "https://github.com/Quantaly/riscv-li"
license = "Apache-2.0"
keywords = ["risc-v"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paw = "1.0"
exitcode = "1.1"