[package]
name = "riscv-li-wasm"
version = "1.0.0"
edition = "2018"
authors = ["Kai Page <kai@quantaly.net>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
riscv-li = { path = ".." }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
#debug = false
#split-debuginfo = '...'  # Platform-specific.
#debug-assertions = false
#overflow-checks = false
lto = true
#panic = 'unwind'
#incremental = false
#codegen-units = 16
#rpath = false
